[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/Tank.gd" type="Script" id=1]
[ext_resource path="res://animation/explosion.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 5 )

[node name="Tank" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunTimer" type="Timer" parent="."]

[node name="Turret" type="Sprite" parent="."]

[node name="Muzzle" type="Position2D" parent="Turret"]

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 2 )

[node name="Sounds" type="Node" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
